--- a/real-time-vocabulary-app/package.json
+++ b/real-time-vocabulary-app/package.json
@@ -2,14 +2,19 @@
   "name": "@real-time-vocabulary-app/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "generate-barrels": "barrel --delete --location libs apps",
+    "start": "nx serve real-time-vocabulary-app"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "~17.3.0",
+    "@angular/cdk": "^19.0.3",
     "@angular/common": "~17.3.0",
     "@angular/compiler": "~17.3.0",
     "@angular/core": "~17.3.0",
     "@angular/forms": "~17.3.0",
+    "@angular/material": "^19.0.3",
     "@angular/platform-browser": "~17.3.0",
     "@angular/platform-browser-dynamic": "~17.3.0",
     "@angular/router": "~17.3.0",
@@ -45,6 +50,7 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
+    "autoprefixer": "^10.4.0",
     "cypress": "^13.6.6",
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.1.0",
@@ -52,6 +58,8 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-preset-angular": "~14.0.3",
+    "jsonc-eslint-parser": "^2.1.0",
+    "ng-packagr": "~17.3.0",
     "nx": "18.3.5",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
