--- a/real-time-vocabulary-app/libs/share-ui/project.json
+++ b/real-time-vocabulary-app/libs/share-ui/project.json
@@ -8,7 +8,9 @@
   "targets": {
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "libs/share-ui/jest.config.ts"
       }
@@ -16,5 +18,13 @@
     "lint": {
       "executor": "@nx/eslint:lint"
     }
-  }
+  },
+  "assets": [
+    "apps/real-time-vocabulary-app/src/assets",
+    {
+      "glob": "**/*",
+      "input": "libs/share-ui/src/assets",
+      "output": "/assets/share-ui"
+    }
+  ]
 }
