--- a/real-time-vocabulary-app/package.json
+++ b/real-time-vocabulary-app/package.json
@@ -19,7 +19,6 @@
     "@angular/platform-browser-dynamic": "~17.3.0",
     "@angular/router": "~17.3.0",
     "@nrwl/linter": "^19.8.4",
-    "@nx/angular": "18.3.5",
     "eslint-plugin-prettier": "^5.2.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,18 +34,15 @@
     "@angular/cli": "~17.3.0",
     "@angular/compiler-cli": "~17.3.0",
     "@angular/language-service": "~17.3.0",
-    "@nx/cypress": "18.3.5",
-    "@nx/eslint": "18.3.5",
-    "@nx/eslint-plugin": "18.3.5",
-    "@nx/jest": "18.3.5",
-    "@nx/js": "18.3.5",
-    "@nx/web": "18.3.5",
-    "@nx/workspace": "18.3.5",
+    "@nrwl/angular": "^19.8.4",
+    "@nx/eslint-plugin": "^20.2.2",
+    "@nx/jest": "19.8.4",
+    "@nx/js": "19.8.4",
     "@schematics/angular": "~17.3.0",
-    "@swc-node/register": "~1.8.0",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@types/jest": "^29.4.0",
+    "@swc-node/register": "~1.9.1",
+    "@swc/core": "~1.5.7",
+    "@swc/helpers": "~0.5.11",
+    "@types/jest": "^29.5.12",
     "@types/node": "18.16.9",
     "@typescript-eslint/eslint-plugin": "^7.3.0",
     "@typescript-eslint/parser": "^7.3.0",
@@ -55,12 +51,12 @@
     "eslint": "~8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-cypress": "^2.13.4",
-    "jest": "^29.4.1",
-    "jest-environment-jsdom": "^29.4.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-preset-angular": "~14.0.3",
     "jsonc-eslint-parser": "^2.1.0",
     "ng-packagr": "~17.3.0",
-    "nx": "^18.3.5",
+    "nx": "^20.2.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
