--- a/real-time-vocabulary-app/tsconfig.base.json
+++ b/real-time-vocabulary-app/tsconfig.base.json
@@ -17,6 +17,9 @@
     "paths": {
       "@real-time-vocabulary-app/libs": ["libs/src/index.ts"],
       "@real-time-vocabulary-app/live-score": ["libs/live-score/src/index.ts"],
+      "@real-time-vocabulary-app/question-multiple-choice": [
+        "libs/question-multiple-choice/src/index.ts"
+      ],
       "@real-time-vocabulary-app/share-logic": [
         "libs/share-logic/src/index.ts"
       ],
